# Syndicate

./: .gitignore  README.md  ROADMAP.md  main.py  playground.ipynb  pyproject.toml
.context/: syndicate-rag-internals-guide.md
docs/guides/: agentic-rag.md  file-input.md  memory-rollback.md  rag_tool_guide.md
docs/production-hardening/: multi-agent-discovery.md  resilience-and-observability.md
examples/: async_usage_example.py  custom_agent_example.py  openai_usage_example.py  rag_knowledge_base_example.py  runtime_interface_example.py  sqlite_memory_example.py  streaming_test.py
src/syndicate/: __init__.py  communication_models.py  mcp.py  protocols.py  registry.py
src/syndicate/agents/: __init__.py  base.py  generic.py  runtime.py
src/syndicate/clients/: __init__.py  base.py  gemini.py  openai.py
src/syndicate/ingestion/: __init__.py  embedding_models.py  text_splitters.py
src/syndicate/memory/: __init__.py  base.py  local.py  mongo.py  sqlite_postgres.py  summarizers.py
src/syndicate/observability/: __init__.py  observers.py
src/syndicate/plans/: mcp_integration_plan.md
src/syndicate/skills/: __init__.py  elasticsearch_skill.py  examples.py  rag_skill.py  registry.py  skill_module.py
src/syndicate/tools/: __init__.py  agent_tool.py  base_tool.py  rag_tool.py  weather_tool.py
src/syndicate/vectorstores/: __init__.py  base.py  elasticsearch.py  mongo.py
tests/: test_regressions.py
