[project]
name = "syndicate"
version = "0.1.0-beta.1"
description = "A modular, plug-and-play AI agent framework inspired by neural skill implants."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.63.0",
    "mcp>=1.26.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
]

# RAG and vector search dependencies
rag = [
    "sentence-transformers>=2.2.0",
]

# API-based embedding services
embeddings-openai = [
    "openai>=1.0.0",
]

embeddings-gemini = [
    "google-generativeai>=0.3.0",
]

embeddings-cohere = [
    "cohere>=5.0.0",
]

# All RAG dependencies
all-rag = [
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "cohere>=5.0.0",
]
